test/errors/unknown_association_field.ecsact
package unknown_association_field;

component ComponentWithAssoc {
	entity foo;
}

system MySystem {
	readwrite ComponentWithAssoc with bar {
		readwrite ComponentWithAssoc;
	}
}

